fix: read attributes with java 8